@@ -1,3 +1,6 @@
+2011-08-20 Tamino Dauth <tamino@cdauth.eu>
+* Added Warcraft III related MIME files.
+
 2011-08-19 Tamino Dauth <tamino@cdauth.eu>
 * blp: Fixed automatic double free of threads in thread group.
 * blp: Fixed compression data initialization.
